Fix z-index

--- a/baxter/themes/firefly/css/style.css
+++ b/baxter/themes/firefly/css/style.css
@@ -2137,7 +2137,7 @@ header[role=banner] {
 #primary-nav .navigation,
 #primary-nav .nav_menu,
 #primary-nav {
-	z-index: auto;
+	z-index: initial;
 }
 
 /* logo and title */
@@ -2303,6 +2303,7 @@ body.collections.show .element-set h2 {
 
 #footer-wrap {
 	z-index: -1;
+	position: relative;
 }
 
 #team div { 
